--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
                <div class="twelve columns">
 
-                   <h5><a href="https://vtcmobile.vn/">VTCMobile, Vietnam/</a></h5>
+                   <h5><a href="https://vtcmobile.vn/">VTCMobile, Vietnam</a></h5>
                   <p class="info">IT specialist <span>•</span> <em class="date">2011 - 2013</em>
 				  
 				  </p>
