--- a/index.html
+++ b/index.html
@@ -636,6 +636,6 @@
    <script src="magnific-popup.js"></script>
    <script src="init.js"></script>
 
-
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&cl=ffffff&w=a"></script>
 
 </em></em></body></html>
