--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             </div>
             
          </div> <!-- item end -->
-
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
 		</div> <!-- main-col end -->
 
       </div> <!-- End Graduate -->
@@ -636,6 +636,5 @@
    <script src="magnific-popup.js"></script>
    <script src="init.js"></script>
 
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&cl=ffffff&w=a"></script>
 
 </em></em></body></html>
