--- a/index.html
+++ b/index.html
@@ -599,7 +599,18 @@
             </div>
             
          </div> <!-- item end -->
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+
+<p></p><h1><span>Visitor Map</span></h1> <p></p> 
+
+		 <div class="row item">
+			
+			<div class="twelve columns">
+                  	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>		 
+            </div>
+            
+         </div> <!-- item end -->
+		 
+
 		</div> <!-- main-col end -->
 
       </div> <!-- End Graduate -->
