--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
          
          </div>
 
-         <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#about"><i class="icon-up-open"></i></a></div>
+         <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#about"><i class="icon-arrow-up"></i></a></div>
 
       </div>
 
