--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 
 		 <div class="row item">			
 			<div>
-                  	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=600&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>		 
+                  	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=40%&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>		 
             </div>
             
          </div> <!-- item end -->
