--- a/index.html
+++ b/index.html
@@ -602,9 +602,9 @@
 
 <p></p><h1><span>Visitor Map</span></h1> <p></p> 
 
-		 <div class="row item" style="width:60%">			
+		 <div class="row item">			
 			<div>
-                  	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>		 
+                  	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=500&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>		 
             </div>
             
          </div> <!-- item end -->
