--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" style="" lang="en"><!--<![endif]--><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-   <!--- Basic Page Needs
+   <!--- Basic Page Needs. Thanks to Kijung Shin @ CMU, we get template from his personal website  :d
    ================================================== -->
    <meta charset="utf-8">
 	<title>Quang-Huy Duong @ NTNU </title>	
