--- a/cv.html
+++ b/cv.html
@@ -59,6 +59,7 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
+	           <b>Date of birth</b>: July 11, 1981
                   <b>Email</b>: huydqyb@gmail.com 
 	          <b>Phone</b>: (+47) 98420887 
 		  <br><b>Room</b> 202 IT-bygget
@@ -591,7 +592,7 @@
 		 <div class="row item">
 			
 			<div class="twelve columns">
-                  <h6>Vietnamese, English, Chinese (basic), Norwegian (little)</h6> 				 
+                  <h6>Vietnamese, English, Chinese (basic), Norwegian (basic)</h6> 				 
             </div>
             
          </div> <!-- item end -->
