--- a/cv.html
+++ b/cv.html
@@ -44,11 +44,11 @@
 
    <!-- About Section   ================================================== -->
    
-   <section id="about">
+   <section id="about" style="background: white;padding-top: 2px;">
 
       <div class="row">
 
-         <div class="three columns">
+         <div class="three columns" style="background: grey;">
              <section id="about">          
 			<div class="profile-pic wow fadeIn a1" data-wow-delay="0.1s">
 				<img alt="" src="proflpic.png">
@@ -58,7 +58,7 @@
               <div>
 
                   <h2>Contact Details</h2>
-                  <p class="address">
+                  <p class="address" style="color: white;">
 	           <b>Date of birth</b>: July 11, 1981
                   <b>Email</b>: huydqyb@gmail.com 
 	          <b>Phone</b>: (+47) 98420887 
@@ -82,13 +82,13 @@
 
          <div class="nine columns main-col">
 
-			<h1><span class="name">Quang-Huy Duong</span></h1>
+			<h1><span class="name" style="color:#313131">Quang-Huy Duong</span></h1>
 			
-			<h2><span class="cmuyellow">PhD Fellow, Department of Computer Science </span><br><span class="cmuyellow">Norwegian University of Science and Technology (NTNU)</span></h2>
+			<h2><span class="cmuyellow" style="color:#313131">PhD Fellow, Department of Computer Science </span><br><span class="cmuyellow">Norwegian University of Science and Technology (NTNU)</span></h2>
 
-            <h2>About Me</h2>
+            <h2 style="color:#313131">About Me</h2>
 
-            <p>
+            <p style="color:#313131">
 			I am a Ph.D. fellow majoring in Computer Science at NTNU, Norway.
 			My research interests include data mining, artificial intelligent, and machine learning. 
 			My supervisors are <a href="https://www.ntnu.no/ansatte/heri">Prof. Heri Ramampiaro</a> and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I was supported by <a href="https://www.ntnu.edu/idi/mused">MUSED project</a>.
