--- a/cv.html
+++ b/cv.html
@@ -91,7 +91,7 @@
             <p style="color:#313131">
 			I am a Ph.D. fellow majoring in Computer Science at NTNU, Norway.
 			My research interests include data mining, artificial intelligent, and machine learning. 
-			My supervisors are <a style="color:#11ABB0" href="https://www.ntnu.no/ansatte/heri">Prof. Heri Ramampiaro</a> and <a style="color:#11ABB0" href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I was supported by <a href="https://www.ntnu.edu/idi/mused">MUSED project</a>.
+			My supervisors are <a style="color:#11ABB0" href="https://www.ntnu.no/ansatte/heri">Prof. Heri Ramampiaro</a> and <a style="color:#11ABB0" href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I was supported by <a style="color:#11ABB0" href="https://www.ntnu.edu/idi/mused">MUSED project</a>.
 			I received M.S. in Computer Science at Hunan University, China, under supervision by <a style="color:#11ABB0" href="http://csee.hnu.edu.cn/info/1415/5650.htm">Prof. Bo Liao</a>.
             </p>
 
