--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	     <li><a class="smoothscroll" href="#resume">Biography</a></li>
 		 <li><a class="smoothscroll" href="#research">Research</a></li>	
          <li><a class="smoothscroll" href="#courses">Misc.</a></li>
-         <li><a href="#">C.V.</a></li>        
+         <li><a target="_blank" href="cv.html">C.V.</a></li>        
       </ul> <!-- end #nav -->
    </nav>
 
@@ -88,7 +88,7 @@
 					<li><a href="https://github.com/thi3nl0ng" title="Github"><i class="fab fa-github"></i></a></li>
 				  </ul>
                <div class=" download">
-                 <a href="#" class="button"><i class="fa fa-download"></i>Download C.V.</a>                
+                 <a href="cv.html" class="button"><i class="fa fa-download"></i>Download C.V.</a>                
                </div>
          </div>
 
