--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
                   <h2>Contact Details</h2>
                   <p class="address" style="color: white;">
 	           <b>Date of birth</b>: July 11, 1981
-                  <b>Email</b>: huydqyb@gmail.com 
+			  <b>Email</b>: <a href="huydqyb@gmail.com">huydqyb@gmail.com</a> 
 	          <b>Phone</b>: (+47) 98420887 
 		  <br><b>Room</b> 202 IT-bygget
                   <br>Department of Computer Science 
@@ -604,7 +604,7 @@
                                 <div class="skill-bar col m10 wow fadeIn a1" data-wow-delay="0.1s">
 					<span>Professor Heri Ramampiaro</span>	
                                     <span>Norwegian University of Science and Technology</span>                                  
-                                    <span>Email: heri@ntnu.no</span>
+					<span>Email: <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></span>
 				    <span>Phone: (+47) 990-27656</span>
                                    
                                 </div>
@@ -613,7 +613,7 @@
                                 <div class="skill-bar col m10 wow fadeIn a2" data-wow-delay="0.2s">
 					<span>Professor Kjetil Nørvåg</span> 
 					<span>Norwegian University of Science and Technology</span>
-					<span>Email: noervaag@ntnu.no</span>
+					<span>Email: <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></span>
 					<span>Phone: (+47) 735-96755</span>                                   
                                 </div>
                             </div>	
@@ -621,7 +621,7 @@
                                 <div class="skill-bar col m10 wow fadeIn a2" data-wow-delay="0.2s">
 					<span>Professor Philippe Fournier-Viger</span> 
 					<span>Harbin Institute of Technology,Shenzhen, China</span>
-					<span>Email: philfv8@yahoo.com</span>
+					<span>Email: <a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></span>
 					<span>Phone: (+86) 755-86231832</span>                                   
                                 </div>
                             </div>		
