--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-                  <b>Email</b>: huydqyb (at) gmail (dot) com 				  
+                  <b>Email</b>: <a href="huydqyb@gmail.com">huydqyb (at) gmail (dot) com</a>   				  
 				  <br>Room 202 IT-bygget
                   <br>Department of Computer Science 
                   <br> Norwegian University of Science and Technology
