--- a/cv.html
+++ b/cv.html
@@ -599,30 +599,30 @@
  <p></p><h1><span>Referees</span></h1> <p></p> 
 
 		 <div class="row item">
-			 <div class="col m6 s12">
+			 <div class="col m6 s12" style="width:33%">
                                
-                                <div class="skill-bar col m10 wow fadeIn a1" data-wow-delay="0.1s">
-					<span>Professor Heri Ramampiaro</span>	
-                                    <span>Norwegian University of Science and Technology</span>                                  
-					<span>Email: <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></span>
-				    <span>Phone: (+47) 990-27656</span>
+                                <div>
+					<div>Professor Heri Ramampiaro</div>	
+                                    <div>Norwegian University of Science and Technology</div>                                  
+					<div>Email: <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></div>
+				    <div>Phone: (+47) 990-27656</div>
                                    
                                 </div>
                             </div>
-                            <div class="col m6 s12">                              
-                                <div class="skill-bar col m10 wow fadeIn a2" data-wow-delay="0.2s">
-					<span>Professor Kjetil Nørvåg</span> 
-					<span>Norwegian University of Science and Technology</span>
-					<span>Email: <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></span>
-					<span>Phone: (+47) 735-96755</span>                                   
+                            <div class="col m6 s12" style="width:33%">                              
+                                <div>
+					<div>Professor Kjetil Nørvåg</div> 
+					<div>Norwegian University of Science and Technology</div>
+					<div>Email: <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></div>
+					<div>Phone: (+47) 735-96755</div>                                   
                                 </div>
                             </div>	
-			  <div class="col m6 s12">                              
-                                <div class="skill-bar col m10 wow fadeIn a2" data-wow-delay="0.2s">
-					<span>Professor Philippe Fournier-Viger</span> 
-					<span>Harbin Institute of Technology,Shenzhen, China</span>
-					<span>Email: <a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></span>
-					<span>Phone: (+86) 755-86231832</span>                                   
+			  <div class="col m6 s12" style="width:33%">                              
+                                <div>
+					<div>Professor Philippe Fournier-Viger</div> 
+					<div>Harbin Institute of Technology,Shenzhen, China</div>
+					<div>Email: <a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></div>
+					<div>Phone: (+86) 755-86231832</div>                                   
                                 </div>
                             </div>		
             </div>
