--- a/cv.html
+++ b/cv.html
@@ -598,14 +598,14 @@
          </div> <!-- item end -->
  <p></p><h1><span>Referees</span></h1> <p></p> 
 
-		 <div class="row item">
+		 <div class="row item" style="margin-left:10px;">
 			 <div class="col m6 s12" style="width:30%">
                                
                                 <div>
 					<div>Professor Heri Ramampiaro</div>	
                                     <div>Norwegian University of Science and Technology</div>                                  
 					<div>Email: <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></div>
-				    <div>Phone: (+47) 990-27656</div>
+					<div>Phone: (+47) 990-27656<i class="fa fa-phone"></i></div>
                                    
                                 </div>
                             </div>
@@ -614,7 +614,7 @@
 					<div>Professor Kjetil Nørvåg</div> 
 					<div>Norwegian University of Science and Technology</div>
 					<div>Email: <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></div>
-					<div>Phone: (+47) 735-96755</div>                                   
+					<div>Phone: (+47) 735-96755<i class="fa fa-phone"></i></div>                                   
                                 </div>
                             </div>	
 			  <div class="col m6 s12" style="width:30%">                              
@@ -622,7 +622,7 @@
 					<div>Professor Philippe Fournier-Viger</div> 
 					<div>Harbin Institute of Technology,Shenzhen, China</div>
 					<div>Email: <a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></div>
-					<div>Phone: (+86) 755-86231832</div>                                   
+					<div>Phone: (+86) 755-86231832<i class="fa fa-phone"></i></div>                                   
                                 </div>
                             </div>		
             </div>
