--- a/cv.html
+++ b/cv.html
@@ -605,7 +605,7 @@
 					<div>Professor Heri Ramampiaro</div>	
                                     <div>Norwegian University of Science and Technology</div>                                  
 					<div>Email: <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></div>
-					<div>Phone: (+47) 990-27656<i class="fa fa-phone"></i></div>
+					<div><i class="fa-phone-square"></i> (+47) 990-27656</div>
                                    
                                 </div>
                             </div>
@@ -614,7 +614,7 @@
 					<div>Professor Kjetil Nørvåg</div> 
 					<div>Norwegian University of Science and Technology</div>
 					<div>Email: <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></div>
-					<div>Phone: (+47) 735-96755<i class="fa fa-phone"></i></div>                                   
+					<div><i class="fa-phone-square"></i> (+47) 735-96755</div>                                   
                                 </div>
                             </div>	
 			  <div class="col m6 s12" style="width:30%">                              
@@ -622,7 +622,7 @@
 					<div>Professor Philippe Fournier-Viger</div> 
 					<div>Harbin Institute of Technology,Shenzhen, China</div>
 					<div>Email: <a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></div>
-					<div>Phone: (+86) 755-86231832<i class="fa fa-phone"></i></div>                                   
+					<div><i class="fa-phone-square"></i> (+86) 755-86231832</div>                                   
                                 </div>
                             </div>		
             </div>
