--- a/cv.html
+++ b/cv.html
@@ -604,7 +604,7 @@
                                 <div>
 					<div>Professor Heri Ramampiaro</div>	
                                     <div>Norwegian University of Science and Technology</div>                                  
-					<div>Email: <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></div>
+					<div><i class="fa fa-envelope"></i> <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></div>
 					<div><i class="fa fa-phone-square fa-lg"></i> (+47) 990-27656</div>
                                    
                                 </div>
@@ -613,7 +613,7 @@
                                 <div>
 					<div>Professor Kjetil Nørvåg</div> 
 					<div>Norwegian University of Science and Technology</div>
-					<div>Email: <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></div>
+					<div><i class="fa fa-envelope"></i> <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></div>
 					<div><i class="fa fa-phone-square fa-lg"></i> (+47) 735-96755</div>                                   
                                 </div>
                             </div>	
@@ -621,7 +621,7 @@
                                 <div>
 					<div>Professor Philippe Fournier-Viger</div> 
 					<div>Harbin Institute of Technology,Shenzhen, China</div>
-					<div>Email: <a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></div>
+					<div><i class="fa fa-envelope"></i><a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></div>
 					<div><i class="fa fa-phone-square fa-lg"></i> (+86) 755-86231832</div>                                   
                                 </div>
                             </div>		
