--- a/cv.html
+++ b/cv.html
@@ -603,7 +603,7 @@
                                
                                 <div>
 					<div>Professor Heri Ramampiaro</div>	
-                                    <div>Norwegian University of Science and Technology</div>                                  
+                                    <div>Norwegian University of Science and Technology, Norway</div>                                  
 					<div><i class="fa fa-envelope"></i> <a href="mailto:heri@ntnu.no">heri@ntnu.no</a></div>
 					<div><i class="fa fa-phone"></i> (+47) 990-27656</div>
                                    
@@ -612,7 +612,7 @@
                             <div class="col m6 s12" style="width:30%">                              
                                 <div>
 					<div>Professor Kjetil Nørvåg</div> 
-					<div>Norwegian University of Science and Technology</div>
+					<div>Norwegian University of Science and Technology, Norway</div>
 					<div><i class="fa fa-envelope"></i> <a href="mailto:noervaag@ntnu.no">noervaag@ntnu.no</a></div>
 					<div><i class="fa fa-phone"></i> (+47) 735-96755</div>                                   
                                 </div>
@@ -620,7 +620,7 @@
 			  <div class="col m6 s12" style="width:30%">                              
                                 <div>
 					<div>Professor Philippe Fournier-Viger</div> 
-					<div>Harbin Institute of Technology,Shenzhen, China</div>
+					<div>Harbin Institute of Technology, Shenzhen, China</div>
 					<div><i class="fa fa-envelope"></i> <a href="mailto:philfv8@yahoo.com">philfv8@yahoo.com</a></div>
 					<div><i class="fa fa-phone"></i> (+86) 755-86231832</div>                                   
                                 </div>
