--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
          <li class="current"><a class="smoothscroll" href="#about">Home</a></li>
 	     <li><a class="smoothscroll" href="#resume">Biography</a></li>
 		 <li><a class="smoothscroll" href="#research">Research</a></li>	
-         <li><a class="smoothscroll" href="#courses">Misc.</a></li>
-         <li><a target="_blank" href="cv.html">C.V.</a></li>        
+         <li><a class="smoothscroll" href="#courses">Services</a></li>
+         <li><a target="_blank" href="cv.html">Curriculum Vitae</a></li>        
       </ul> <!-- end #nav -->
    </nav>
 
