--- a/index.html
+++ b/index.html
@@ -331,8 +331,26 @@
 
 		 <p></p><h1><span>Publications</span></h1>		
 		 <p></p>
-	
-		<h4>2018 or Later </h4>
+	<h4>2019 or Later </h4>
+              <div class="row item">
+			
+			<div class="one column">
+				<h5> [J7] </h5>
+			</div>
+			
+			<div class="eleven columns" style="margin-bottom: 8px;">
+
+                  <h5>Towards efficiently mining closed high utility itemsets from incremental databases</h5>
+                  <p class="info">Thu-Lan Dam, Heri Ramampiaro, Kjetil Nørvåg, <em class="author">Quang-Huy Duong</em><br> 
+				  <em class="conf"><a href="https://www.journals.elsevier.com/knowledge-based-systems">Knowledge-Based Systems</a></em>.
+				  
+				  [<a href="#"> paper </a> | <a href="#"> code and datasets </a> | <a href="#"> bib  </a>]<br> 
+				  </p>
+				  
+            </div>
+
+         </div> <!-- item end -->
+		<h4>2018</h4>
               <div class="row item">
 			
 			<div class="one column">
