--- a/index.html
+++ b/index.html
@@ -566,6 +566,7 @@
 	  			  <li> <h6>The national encouragement prize in Math for high school student</h6>, 1999 </li>
                   <li> <h6>Full CSC Scholaship for Master degree</h6>, Sep, 2014 - Nov, 2016 </li>
                   <li> <h6>PhD Fellowship</h6>, March, 2017 - March, 2021 </li>
+		 <li> <h6>Selected for Best Papers of the Industrial Conference on Data Mining 2016</li>
                 </ul>
             </div>
 
@@ -578,7 +579,7 @@
 		 <div class="row item">
 			
 			<div class="twelve columns">
-	  			  <h6>Teaching Assistant of TDT4310 - Intelligent Text Analytics and Language Understanding,</h6> Spring 2018 [ <a href="https://www.ntnu.edu/studies/courses/TDT4310#tab=omEmnet">www</a> ]
+	  			  <h6>Teaching Assistant of TDT4310 - Intelligent Text Analytics and Language Understanding,</h6> Spring 2018, Spring 2019 [ <a href="https://www.ntnu.edu/studies/courses/TDT4310#tab=omEmnet">www</a> ]
             </div>
 
          </div> <!-- item end -->
