--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 	  			  <li> <h6>The national encouragement prize in Math for high school student</h6>, 1999 </li>
                   <li> <h6>Full CSC Scholaship for Master degree</h6>, Sep, 2014 - Nov, 2016 </li>
                   <li> <h6>PhD Fellowship</h6>, March, 2017 - March, 2021 </li>
-		 <li> <h6>Selected for Best Papers of the Industrial Conference on Data Mining 2016</li>
+		 <li> <h6>Selected for Best Papers of the Industrial Conference on Data Mining</h6> 2016</li>
                 </ul>
             </div>
 
