--- a/cv.html
+++ b/cv.html
@@ -315,13 +315,31 @@
       ----------------------------------------------- -->
       <div class="row publications">
 
-         <div class="twelve columns main-col">
+       <div class="twelve columns main-col">
 
 		 <p></p><h1><span>Publications</span></h1>		
 		 <p></p>
-	
-		<h4>2018 or Later </h4>
+	<h4>2019 or Later </h4>
               <div class="row item">
+			
+			<div class="one column">
+				<h5> [J8] </h5>
+			</div>
+			
+			<div class="eleven columns" style="margin-bottom: 8px;">
+
+                  <h5>Towards efficiently mining closed high utility itemsets from incremental databases</h5>
+                  <p class="info">Thu-Lan Dam, Heri Ramampiaro, Kjetil Nørvåg, <em class="author">Quang-Huy Duong</em><br> 
+				  <em class="conf"><a href="https://www.journals.elsevier.com/knowledge-based-systems">Knowledge-Based Systems</a></em>.
+				  
+				  [<a href="#"> paper </a> | <a href="#"> code and datasets </a> | <a href="#"> bib  </a>]<br> 
+				  </p>
+				  
+            </div>
+
+         </div> <!-- item end -->
+		<h4>2018</h4>
+<div class="row item">
 			
 			<div class="one column">
 				<h5> [J7] </h5>
@@ -536,6 +554,7 @@
 	  			  <li> <h6>The national encouragement prize in Math for high school student</h6>, 1999 </li>
                   <li> <h6>Full CSC Scholaship for Master degree</h6>, Sep, 2014 - Nov, 2016 </li>
                   <li> <h6>PhD Fellowship</h6>, March, 2017 - March, 2021 </li>
+			<li> <h6>Selected for Best Papers of the Industrial Conference on Data Mining</h6> 2016</li>
                 </ul>
             </div>
 
@@ -548,7 +567,7 @@
 		 <div class="row item">
 			
 			<div class="twelve columns">
-	  			  <h6>Teaching Assistant of TDT4310 - Intelligent Text Analytics and Language Understanding,</h6> Spring 2018 [ <a href="https://www.ntnu.edu/studies/courses/TDT4310#tab=omEmnet">www</a> ]
+	  			  <h6>Teaching Assistant of TDT4310 - Intelligent Text Analytics and Language Understanding,</h6> Spring 2018, Spring 2019 [ <a href="https://www.ntnu.edu/studies/courses/TDT4310#tab=omEmnet">www</a> ]
             </div>
 
          </div> <!-- item end -->
