--- a/index.html
+++ b/index.html
@@ -332,6 +332,26 @@
 		 <p></p><h1><span>Publications</span></h1>		
 		 <p></p>
 	<h4>2019 or Later </h4>
+		    <div class="row item">
+			
+			<div class="one column">
+				<h5> 12.J. </h5>
+			</div>
+			
+			<div class="eleven columns" style="margin-bottom: 8px;">
+
+                  <h5>Discovering Periodic Itemsets Using Novel Periodicity Measures</h5>
+                  <p class="info">Philippe Fournier-Viger, Peng Yang, Jerry Chun-Wei Lin, <em class="author">Quang-Huy Duong</em>, Thu-Lan Dam, Jaroslav Frnda, Lukas Sevcik, Miroslav Voznak
+			  <br> 
+				  <em class="conf"><a href="http://advances.utc.sk/index.php/AEEE/article/view/3185">Advances in Electrical and Electronic Engineering</a></em>.
+				  
+				  [<a href="#"> paper </a> | <a href="#"> code and datasets </a> | <a href="#"> bib  </a>]<br> 
+				  </p>
+				  
+            </div>
+
+         </div> <!-- item end -->
+		 
               <div class="row item">
 			
 			<div class="one column">
