--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                <div class="twelve columns">                 
                   <p class="info">Ph.D. in Computer Science
-				  <span>•</span> Norwegian University of Science and Technology, Norway <span>•</span><em class="date">March. 2017 - Present</em>
+				  <span>•</span> NTNU, Norway <span>•</span><em class="date">March. 2017 - Present</em>
 				  </p>
 
                </div>
