--- a/index.html
+++ b/index.html
@@ -321,6 +321,24 @@
 		 <p></p><h1><span>Publications</span></h1>		
 		 <p></p>
 	<h4>2019 or Later </h4>
+		  <div class="row item">
+			
+			<div class="one column">
+				<h5> 15.C. </h5>
+			</div>
+			
+			<div class="eleven columns" style="margin-bottom: 8px;">
+
+                  <h5>A Better Density Guarantee of Dense Subtensor and Dense Subgraph Detection</h5>
+                  <p class="info"><em class="author">Quang-Huy Duong</em><br> 
+				  <em class="conf"><a href="#">Under Submission</a></em>.
+				  
+				  [<a href="#"> paper </a> | <a href="#"> code and datasets </a> | <a href="#"> bib  </a>]<br> 
+				  </p>
+				  
+            </div>
+		 </div>	 
+		 
 		 <div class="row item">
 			
 			<div class="one column">
