--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<li><a href="https://github.com/thi3nl0ng" title="Github"><i class="fab fa-github"></i></a></li>
 				  </ul>
                <div class=" download">
-                 <a href="cv.html" class="button"><i class="fa fa-download"></i>Download C.V.</a>                
+                 <a href="cv.pdf" class="button"><i class="fa fa-download"></i>Download C.V.</a>                
                </div>
          </div>
 
