--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
              <section id="about">          
 			<div class="profile-pic wow fadeIn a1" data-wow-delay="0.1s">
 				<img alt="" src="proflpic.png">
+				 <div class="download">
+				 	<a href="cv.pdf" class="button"><i class="fa fa-download"></i>My C.V is here, Pls check it out.</a>                
+			         </div>
 			</div>    
             
         </section>
@@ -87,9 +90,7 @@
 					<li><a href="https://scholar.google.com/citations?user=qMEE7m8AAAAJ&hl=en" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
 					<li><a href="https://github.com/thi3nl0ng" title="Github"><i class="fab fa-github"></i></a></li>
 				  </ul>
-               <div class=" download">
-                 <a href="cv.pdf" class="button"><i class="fa fa-download"></i>Download C.V.</a>                
-               </div>
+              
          </div>
 
          <div class="nine columns main-col">
