--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="profile-pic wow fadeIn a1" data-wow-delay="0.1s">
 				<img alt="" src="proflpic.png">
 				 <div class="download">
-				 	<a href="cv.pdf" class="button"><i class="fa fa-download"></i>My C.V is here, Pls check it out.</a>                
+				 	<a href="cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>My C.V.</a>                
 			         </div>
 			</div>    
             
