--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <p>
 			I am a Ph.D. fellow majoring in Computer Science at NTNU, Norway.
-			My research interests include data mining, artificial intelligent, and machine learning. 
+			My research interests include data mining, optimization, artificial intelligent, and machine learning. 
 			<!--My supervisors are <a href="https://www.ntnu.no/ansatte/heri">Prof. Heri Ramampiaro</a> and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I was supported by <a href="https://www.ntnu.edu/idi/mused">MUSED project</a>.-->
 			I received M.S. in Computer Science at Hunan University, China.
             </p>
