--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	     <li><a class="smoothscroll" href="#resume">Biography</a></li>
 		 <li><a class="smoothscroll" href="#research">Research</a></li>	
          <li><a class="smoothscroll" href="#courses">Services</a></li>
-         <li><a target="_blank" href="cv.html">Curriculum Vitae</a></li>        
+         <li><a target="_blank" href="cv.pdf">Curriculum Vitae</a></li>        
       </ul> <!-- end #nav -->
    </nav>
 
