--- a/index.html
+++ b/index.html
@@ -670,6 +670,16 @@
             </div>
 
          </div> <!-- item end -->
+		   <div class="row item">
+			
+			<div class="twelve columns">
+
+                  <h6>DT8122 - Probabilistic Artificial Intelligence</h6> Spring 2019
+				  [ <a href="https://www.ntnu.edu/studies/courses/DT8122">www</a> ]
+
+            </div>
+
+         </div> <!-- item end -->
 
 		 <p></p><h1><span>Invited Reviewer for</span></h1> <p></p> 
 
