--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <div class="row item">
 
                <div class="twelve columns">                  
-                  <p class="info">IT specialist <span>•</span> <a href="https://www.mbbank.com.vn">Military Bank, Vietnam</a> <span>•</span><em class="date">May. 2013 - Sep. 2014</em>
+                  <p class="info">Senior Software Engineer <span>•</span> <a href="https://www.mbbank.com.vn">Military Bank, Vietnam</a> <span>•</span><em class="date">May. 2013 - Sep. 2014</em>
 				  
 				  </p>
 
@@ -275,7 +275,7 @@
 
                <div class="twelve columns">
 
-                  <p class="info">IT specialist <span>•</span> <a href="https://vtcmobile.vn/">VTCMobile, Vietnam</a> <span>•</span><em class="date">2011 - 2013</em>
+                  <p class="info">Solution Architect <span>•</span> <a href="https://vtcmobile.vn/">VTCMobile, Vietnam</a> <span>•</span><em class="date">2011 - 2013</em>
 				  
 				  </p>
 
