--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
    <!-- About Section   ================================================== -->
 
-   <nav id="nav-wrap">
+   <nav id="nav-wrap" style="background:#444;">
       <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
 	  <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
 	  <ul id="nav" class="nav">
