--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
 
                   <h5>Sketching Streaming Histogram Elements using Multiple Weighted Factors</h5>
                   <p class="info"><em class="author">Quang-Huy Duong</em>, Heri Ramampiaro, Kjetil Nørvåg<br> 
-				  <em class="conf"><a href="#">Under Submission</a></em>.
+				  <em class="conf"><a href="www.cikm2019.net">The 28th ACM International
+Conference on Information and Knowledge Management, CIKM</a></em>.
 				  
 				  [<a href="#"> paper </a> | <a href="#"> code and datasets </a> | <a href="#"> bib  </a>]<br> 
 				  </p>
