--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
          <div class="three columns">
              <section id="about">          
 			<div class="profile-pic wow fadeIn a1" data-wow-delay="0.1s">
-				<img alt="" src="proflpic.png">
+				<img alt="" src="pr.jpg">
 				 <div class="download">
 				 	<a href="cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>My C.V.</a>                
 			         </div>
