--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                    
 					<li><a href="https://www.linkedin.com/in/duong-huy-99673b60/" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
 					<li><a href="https://scholar.google.com/citations?user=qMEE7m8AAAAJ&hl=en" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></li>
-					<li><a href="https://github.com/thi3nl0ng" title="Github"><i class="fab fa-github"></i></a></li>
+					<li><a href="https://bitbucket.org/duonghuy/" title="Github"><i class="fab fa-github"></i></a></li>
 				  </ul>
               
          </div>
