--- a/index.html
+++ b/index.html
@@ -101,10 +101,18 @@
 
             <h2>About Me</h2>
 
-            <p>
-			I am a Ph.D. fellow majoring in Computer Science at NTNU, Norway.
+            <p><p>I am pursuing my PhD in Computer Science here at NTNU. My research topic is data mining. In&nbsp;somehow,&nbsp;others might say it is related (less) to machine learning (ML), no false positive, of course. It happens quite often now, most people say doing ML. It&#39;s understandable. We need to say that we know&nbsp;ML to have a higher chance of getting&nbsp;a job,&nbsp;all for food, money stuff ;).&nbsp;Or in the worst case, not be alone in an air blade group. However, I do not like to say that what I did&nbsp;is or makes me feel like I was doing research in ML. I have interest in Optimization, and anything related to security. I spent some time on ML, mostly with Capsule Net.&nbsp;I&nbsp;was really excited, found (thought) some ideas, but I still need to finish other stuffs with my PhD first. So, I will be back to&nbsp;it later, sure soon. I don&#39;t know&nbsp;much Mathematics,&nbsp;but I will try best and use any means to not be out of the flows.&nbsp;At least I know basic Math that I can count how much money in my pocket.</p>
+
+<p>I am a person of r<span class="mw-headline" id="Realism_or_naturalism_as_resisting_idealization">ealism, like playing with number, e.g. lottery. My biggest dream is to crack money exchange chain.</span></p>
+
+<p><br />
+If you are reading this, you might do searching something or curious on my&nbsp;things. If you find anything interesting or get what you want, please drop me an echo, because I haven&#39;t found it for a very long time.</p>
+
+<p>Above all, I am not a l33ts, I am a zombie, learning to act like professional.</p>
+
+			<!-- I am a Ph.D. fellow majoring in Computer Science at NTNU, Norway.
 			My research interests include data mining, optimization, artificial intelligent, and machine learning. 
-			<!--My supervisors are <a href="https://www.ntnu.no/ansatte/heri">Prof. Heri Ramampiaro</a> and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I was supported by <a href="https://www.ntnu.edu/idi/mused">MUSED project</a>.-->
+			My supervisors are <a href="https://www.ntnu.no/ansatte/heri">Prof. Heri Ramampiaro</a> and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I was supported by <a href="https://www.ntnu.edu/idi/mused">MUSED project</a>.-->
 			I received M.S. in Computer Science at Hunan University, China.
             </p>
 
