--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ I am a person of realism, like playing with number, e.g. lottery. My biggest dre
 If you are reading this, you might do searching something or curious on my things. If you find anything interesting or get what you want, please drop me an echo, because I haven&#39;t found it for a very long time.
 <br />
 
-Above all, I am not a l33ts, I am a zombie, learning to act like professional. &#1F33E;
+Above all, I am not a l33ts, I am a zombie, learning to act like professional. &#x1F33E;
 
 			<!-- I am a Ph.D. fellow majoring in Computer Science at NTNU, Norway.
 			My research interests include data mining, optimization, artificial intelligent, and machine learning. 
