--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@
             <h2>About Me</h2>
 
             I am pursuing my PhD in Computer Science here at NTNU. My research topic is data mining. 
-In somehow, others might say it is related (less) to machine learning (ML), no false positive, of course. 
+In somehow, others might say it is related (less) to machine learning (ML), no false positive, of course. In my works, I build automatically tuning models (optimize cost), specificcally for change detection. 
+I also took probabilistic summer school (as a PhD course) and participated in lab works of the course, natural language processing with python.
 It happens quite often now, most people say doing ML. 
 It&#39;s understandable. We need to say that we know ML to have a higher chance of getting a job, all for food, money stuff ;). 
 Or in the worst case, not be alone in an air blade group. 
 However, I do not like to say that what I did is or makes me feel like I was doing research in ML. 
 I have interest in Optimization, and anything related to security. 
 I spent some time on ML, mostly with Capsule Net. 
-I was really excited, found (thought) some ideas, but I still need to finish other stuffs with my PhD first. 
+I was really excited in CapNet and unsupervised learning, found (thought) some ideas, but I still need to finish other stuffs with my PhD first. 
 So, I will be back to it later, sure soon. I don&#39;t know much Mathematics, but I will try best and use any means to not be out of the flows. 
 At least I know basic Math that I can count how much money in my pocket.
 
