--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             I am pursuing my PhD in Computer Science here at NTNU. My research topic is data mining. 
 In somehow, others might say it is related (less) to machine learning (ML), no false positive, of course. In my works, I build automatically tuning models (optimize cost), specificcally for change detection. 
-I also took probabilistic artificial intelligence summer school (as a PhD course). I was participated in lab works of the course natural language processing with python for the 3rd year bachelor student at NTNU.
+I also took probabilistic artificial intelligence summer school (as a PhD course). I was assistant in the course natural language processing with python for the 3rd year bachelor student at NTNU, and was responsible for labs.
 It happens quite often now, most people say doing ML. 
 It&#39;s understandable. People need to say that we know ML to have a higher chance of getting a job, all for food, money stuff ;). 
 Or in the worst case, not be alone in an air blade group. 
