--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I
 
 		 <div class="row item">			
 			<div>
-                  	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=500&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>		 
+                  	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig"></script>		 
             </div>
             
          </div> <!-- item end -->
