--- a/index.html
+++ b/index.html
@@ -66,11 +66,8 @@
 			<div class="profile-pic wow fadeIn a1" data-wow-delay="0.1s">
 				<img alt="" src="pr.jpg">
 				 <div class="download">
-				 	<a href="cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Full CV.</a>                
-			         </div>
-				<div class="download">
-				 	<a href="huyduong_cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Short CV.</a>                
-			         </div>
+				 	<a href="cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Full CV.</a> <a href="huyduong_cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Short CV.</a>               
+			         </div>				
 			</div>    
             
         </section>
