--- a/index.html
+++ b/index.html
@@ -655,6 +655,7 @@ and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I
 	  			  <li> <h6>National award in Mathematics for high school student</h6>, 1999 </li>
                   <li> <h6>Full CSC Scholarship for Master degree</h6>, Sep, 2014 - Nov, 2016 </li>
                   <li> <h6>PhD Fellowship</h6>, March, 2017 - March, 2021 </li>
+			<li> <h6>Travel Grant</h6>, Nov 2019 </li>
 		 <li> <h6>Selected for Best Papers of the Industrial Conference on Data Mining</h6> 2016</li>
                 </ul>
             </div>
