--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I
             
          </div> <!-- item end -->
 
-
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&cl=ffffff&w=a"></script>
 
 		</div> <!-- main-col end -->
 
