--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@ and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I
             </div>
             
          </div> <!-- item end -->
-
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&cl=ffffff&w=a"></script>
+<br \>
+<script type="text/javascript" style='width: 600px; height: 294.118px;" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&cl=ffffff&w=a"></script>
 
 		</div> <!-- main-col end -->
 
