--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h2>About Me</h2>
 
             I am pursuing my PhD in Computer Science here at NTNU. My research topic is data mining. 
-In somehow, others might say it is related (less) to machine learning (ML), no false positive, of course. In my works, I build automatically tuning models (optimize cost), specificcally for change detection. 
+In somehow, others might say it is related (less) to machine learning (ML), no false positive, of course. In my works, I build automatically tuning models (optimizing a cost), specificcally for change detection. 
 <!-- I also took probabilistic artificial intelligence summer school (as a PhD course). I was assistant in the course natural language processing with python for the 3rd year bachelor student at NTNU, and was responsible for the labs.
 
 		 It happens quite often now, most people say doing ML. 
@@ -111,7 +111,7 @@ It&#39;s understandable. People need to say that we know ML to have a higher cha
 Or in the worst case, not be alone in an air blade group. 
 However, I do not like to say that what I did is or makes me feel like I was doing research in ML. 
 -->
-I have interest in Optimization, and anything related to security. 
+I have interests in Optimization, and anything related to security. 
 I spent some time on ML, mostly with Capsule Net. 
 I was really excited in CapNet and unsupervised learning, found (thought) some ideas, but I still need to finish other stuffs with my PhD first. 
 So, I will be back to it later, sure soon. 
