--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="profile-pic wow fadeIn a1" data-wow-delay="0.1s">
 				<img alt="" src="pr.jpg">
 				 <div class="download">
-				 	<a href="huyduong_cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Full CV.</a> <a href="huyduong_cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Short CV.</a>               
+				 	<a href="huyduong_cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Resume</a> <a href="cv.pdf" target="_blank" class="button"><i class="fa fa-download"></i>CV</a>               
 			         </div>				
 			</div>    
             
